# fufufafaethon

./: .gitignore  DIAGRAM.md  README.md  devenv.nix  fufufafaethon.py  pyproject.toml  utils.py
dumps/: genai_result.json  reports.md  segments_result.json  text_result.txt  whisper_segments.json
server/: Cargo.toml
server/src/: main.rs
