[project]
name = "fufufafaethon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "moviepy>=2.2.1",
    "validators>=0.35.0",
    "whisper-timestamped>=1.15.9",
    "yt-dlp>=2025.11.12",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
yt-dlp = { git = "https://github.com/yt-dlp/yt-dlp" }
